--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -15,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/google-maps": "^4.0.0",
     "@types/leaflet": "^1.9.16",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
