--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/google.maps": "^3.58.1",
     "@types/lodash": "^4.17.15",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
