--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
         "allowTernary": true,
         "allowTaggedTemplates": true
       }
-    ]
+    ],
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/no-html-link-for-pages": "off"
   }
 }
