Final connect server

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@types/google-maps": "^4.0.0",
     "@types/leaflet": "^1.9.16",
+    "@types/proj4": "^2.5.6",
     "@vis.gl/react-google-maps": "^1.5.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
@@ -26,6 +27,7 @@
     "next": "15.2.0-canary.51",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
+    "proj4": "^2.15.0",
     "react": "latest",
     "react-dom": "latest",
     "react-leaflet": "^5.0.0",
