--- a/package.json
+++ b/package.json
@@ -7,19 +7,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@googlemaps/markerclusterer": "^2.5.3",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
-    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/google-maps": "^4.0.0",
     "@types/leaflet": "^1.9.16",
     "@types/proj4": "^2.5.6",
-    "@vis.gl/react-google-maps": "^1.5.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.41.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lodash": "^4.17.21",
@@ -34,11 +32,11 @@
     "react-leaflet-routing-machine": "^0.0.5",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/google.maps": "^3.58.1",
     "@types/lodash": "^4.17.15",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
