--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@typescript-eslint/eslint-plugin": "8.24.0",
     "@typescript-eslint/parser": "8.24.0",
     "autoprefixer": "10.4.20",
+    "dotenv": "^16.4.7",
     "eslint-config-next": "15.1.7",
+    "pg": "^8.14.1",
     "postcss": "8.5.1",
     "tailwindcss": "3.4.17"
   }
