--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "proj4": "^2.15.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "react-leaflet-routing-machine": "^0.0.5",
     "typescript": "5.7.3",
