--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "react-leaflet-routing-machine": "^0.0.5",
+    "recharts": "^2.15.1",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "uuid": "^11.1.0",
