--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
     "react": "latest",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "latest",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-routing-machine": "^0.0.5",
     "typescript": "5.7.3",
