--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/forms": "^0.5.10",
+    "@turf/turf": "^7.2.0",
     "@types/google-maps": "^4.0.0",
     "@types/leaflet": "^1.9.16",
     "bcryptjs": "^2.4.3",
@@ -21,6 +24,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^2.15.0",
     "next": "15.2.0-canary.51",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
@@ -30,6 +34,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-routing-machine": "^0.0.5",
+    "react-map-gl": "^7.1.6",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.1"
@@ -46,5 +51,10 @@
     "eslint-config-next": "15.1.7",
     "postcss": "8.5.1",
     "tailwindcss": "3.4.17"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
