--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-map-gl": "^7.1.6",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -44,7 +45,9 @@
     "@types/lodash": "^4.17.15",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "19.0.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "8.24.0",
     "@typescript-eslint/parser": "8.24.0",
     "autoprefixer": "10.4.20",
