--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/leaflet": "^1.9.16",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lodash": "^4.17.21",
