--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "@types/leaflet": "^1.9.16",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
-    "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
-    "mapbox-gl": "^2.15.0",
+    "mapbox-gl": "^3.11.0",
     "next": "15.2.0-canary.51",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.5",
@@ -35,10 +34,9 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-routing-machine": "^0.0.5",
-    "react-map-gl": "^7.1.6",
+    "react-map-gl": "^8.0.2",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
-    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -46,19 +44,17 @@
     "@types/lodash": "^4.17.15",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "19.0.3",
-    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "8.24.0",
     "@typescript-eslint/parser": "8.24.0",
     "autoprefixer": "10.4.20",
     "eslint-config-next": "15.1.7",
     "postcss": "8.5.1",
-    "tailwindcss": "3.4.17"
-  },
-  "pnpm": {
-    "ignoredBuiltDependencies": [
-      "sharp"
-    ]
+    "tailwindcss": "3.4.17",
+    "mapbox-gl": "^2.15.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mapbox/mapbox-sdk": "^0.15.3",
+    "react-map-gl": "^7.1.6",
+    "@turf/turf": "^6.5.0"
   }
 }
