--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "@typescript-eslint/no-unused-expressions": [
-      "warn",
+      "off",
       {
         "allowShortCircuit": true,
         "allowTernary": true,
